# cppexprpars

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
include/: cppexprpars.hpp
include/cppexprpars/: context.hpp  expr_node.hpp  function.hpp  operators.hpp  parser.hpp  token.hpp  tokenizer.hpp
src/: cppexprpars.cpp  expr_node.cpp  function.cpp
tests/: quick_example.cpp  test.cpp
